--- a/package.xml
+++ b/package.xml
@@ -51,14 +51,17 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>nav_msgs</build_depend>
+  <!--<build_depend>nav_msgs</build_depend>-->
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
-  <build_depend>eigen_conversions</build_depend>
+  <build_depend>message_generation</build_depend>
+  <!--<build_depend>eigen_conversions</build_depend>-->
   <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -74,6 +77,10 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>message_generation</exec_depend>
+  <exec_depend>moveit_core</exec_depend>
+  <exec_depend>moveit_msgs</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
